# arcana-cli

./: Cargo.toml  README.md
src/: deck.rs  error.rs  journal.rs  main.rs
src/cards/: major.rs  minor.rs  mod.rs
src/spreads/: mod.rs
src/tui/: app.rs  mod.rs
src/tui/screens/: card_browser.rs  card_detail.rs  card_reveal.rs  daily_card.rs  help.rs  home.rs  journal.rs  journal_detail.rs  mod.rs  reading_complete.rs  reading_notes.rs  shuffle.rs  spread_selection.rs
src/tui/widgets/: mod.rs  spread_layout.rs
src/ui/: mod.rs  theme.rs
